[tool.poetry]
name = "pufrpy"
version = "0.1.0"
description = "Python implementation of the pufr library"
authors = ["Sergio Vinagrero <servinagrero@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pufrpy"}]

[tool.poetry.dependencies]
python = ">3.9"
numpy = "<1.25"
numba = "<=0.58"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
